--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 style="color: aqua;">my repo</h1>
+    <h1 style="color:blue;">my repo</h1>
 </body>
 </html>
